키보드 패드 누를 때 효과, MainGamePage 호출 두번되는 현상 해결해야함

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -134,3 +134,15 @@ button:focus-visible {
   background-color: darkgray;
   margin : 3px;
 }
+
+.keydownStyle{
+  opacity: 0.3;
+}
+
+.bingo {
+  background-color: green;
+}
+
+.half-bingo {
+  background-color: #888;
+}
