정답 체크 관련 로직 추가 및 Routing관련 로직 수정

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -146,3 +146,15 @@ button:focus-visible {
 .half-bingo {
   background-color: #888;
 }
+
+.out {
+  background-color: firebrick;
+}
+
+.ball {
+  background-color: coral;
+}
+
+.strike {
+  background-color: darkseagreen;
+}
